# pirandello

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md
.cursor/rules/: docs-sync.mdc
.github/workflows/: pages.yml
cli/: README.md  pyproject.toml
cli/masks/: __main__.py  cli.py  doctor_cmd.py  env_util.py  hooks.py  index.py  index_cmd.py  ooda_parse.py  paths.py  reference_refresh_cmd.py  reflect.py  reflect_cmd.py  role_cmd.py  roles.py  run.py  run_cmd.py  setup_cmd.py  status_cmd.py  sync_cmd.py  token_budget.py
cli/masks/_data/: .env.example  AGENTS.md
cli/masks/_data/guards/: mask-ooda-orient-synthesis.sh  ooda-act.sh  ooda-observe.sh
cli/masks/_data/hooks/: post-commit.sh  start.sh
cli/masks/_data/templates/: OODA.md  role.env.example
docs/: SCENARIOS.md  SPEC.md  design.md
docs/plans/add-role-skill/: PLAN.md
docs/plans/archive-skill/: PLAN.md
docs/plans/cursor-extension/: PLAN.md
docs/plans/masks-cli-core/: PLAN.md
docs/plans/masks-index/: PLAN.md
docs/plans/masks-reflect/: PLAN.md
docs/plans/masks-run/: PLAN.md
extension/: README.md  package-lock.json  package.json
extension/src/: config.ts  extension.ts
guards/: daily-briefer.sh  email-classifier.sh
hooks/: end.sh  start.sh
site/: _config.yml  index.md
site/_posts/: 2026-04-24-one-no-one-and-one-hundred-thousand.md
skills/mask-add-role/: SKILL.md
skills/mask-archive/: SKILL.md
skills/mask-onboarding/: SKILL.md
skills/mask-ooda-orient-synthesis/: SKILL.md
skills/mask-reference-refresh/: SKILL.md
skills/mask-reflect/: SKILL.md
templates/: AGENTS.md
(+33 files in other folders)
