[project]
name = "masks"
version = "0.1.0"
description = "Pirandello masks CLI — setup, sync, doctor, OODA runner, memory index"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12.0",
    "tiktoken>=0.7.0",
    "mcp-memory-service>=10.40.3",
]

[project.scripts]
masks = "masks.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["masks"]
