[project]
name = "masks"
version = "0.1.0"
description = "Pirandello masks CLI — setup, sync, doctor, OODA runner, memory index"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12.0",
    "tiktoken>=0.7.0",
    "mcp-memory-service>=10.40.3",
]

[project.scripts]
masks = "masks.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["masks"]

[tool.hatch.build.targets.wheel.force-include]
# Hidden files inside _data/ are excluded by hatchling's default glob rules,
# so we enumerate them explicitly.
"masks/_data/.env.example" = "masks/_data/.env.example"
"masks/_data/templates/.gitignore" = "masks/_data/templates/.gitignore"
